# build-benchmark

./: CMakeLists.txt  Makefile  README.md  all.h  build-makefiles.sh  build-ninja-cygwin.sh  build-ninja-msys2.sh  build-ninja.sh  gen_c_files.py  main.c
